# bbengine

./: .gitignore  CMakeLists.txt  readme.md
Docs/: ClassList.txt
inc/: BoxScore.h  InjuryManager.h  Player.h  Schedule.h  Season.h  Simulator.h  StartingRotation.h  StatsManager.h
include/: BEPlayer_Attributes.h  Game.h  League.h  Player.h  SimulationManager.h  Team.h
includes/: BoxScore.h  GameManager.h  League.h  Player.h  PlayerAttributes.h  PlayerStats.h  Simulator.h  Standings.h  StartingRotation.h  Team.h  TradeManager.h
src/: BEPlayer_Attributes.cpp  BoxScore.cpp  Game.cpp  GameManager.cpp  InjuryManager.cpp  League.cpp  Player.cpp  PlayerAttributes.cpp  PlayerStats.cpp  Schedule.cpp  Season.cpp  SimulationManager.cpp  Simulator.cpp  Standings.cpp  StartingRotation.cpp  StatsManager.cpp  Team.cpp  TradeManager.cpp
tests/: gamesim.cpp  main.cpp
